# fca-dashboard4

./: .flake8  .gitignore  .markdownlint.json  .prettierrc.example  .vscode  Makefile  README.md  empty_test.xlsx  mypy.ini  nexusml-repomix-output.md  packed-repo.md  prediction_results.csv  pyproject.toml  pytest.ini  repomix-output.txt  requirements.txt  setup.cfg  setup.py  setup_classifier_env.bat  test_empty_file.py  test_missing_columns.py  view_diagrams.html
nexusml/: CHANGELOG.md  README.md  __init__.py  classify_equipment.py  focused next steps.md  mypy.ini  predict.py  predict_v2.py  pyproject.toml  setup.py  test_reference_validation.py  train_model_pipeline.py  train_model_pipeline_v2.py
nexusml/config/: .repomixignore  __init__.py  classification_config.yml  compatibility.py  data_config.yml  fake_data_feature_config.yml  feature_config.yml  interfaces.py  manager.py  model_card.py  model_card_config.yml  nexusml_config.yml  paths.py  production_data_config.yml  production_nexusml_config.yml  reference_config.yml  repomix.config.json  sections.py  validation.py
nexusml/config/eav/: equipment_attributes.json
nexusml/config/implementations/: __init__.py  yaml_configs.py
nexusml/config/mappings/: masterformat_equipment.json  masterformat_primary.json
nexusml/core/: __init__.py  data_mapper.py  data_preprocessing.py  dynamic_mapper.py  eav_manager.py  feature_engineering.py  model.py  model_building.py  repomix-output.txt
nexusml/core/cli/: __init__.py  (+2 more)
nexusml/docs/: README.md  api_reference.md  configuration_guide.md  dependencies.md  documentation_checklist.md  documentation_plan.md  feature_engineering.md  immediate_improvements.md  installation_guide.md  ml_classification_mapping_solution.md  next_session_quickstart.md  next_steps.md  offline_resources.md  phase3_documentation_plan.md  type_checking.md  usage_guide.md
nexusml/examples/: README.md  __init__.py  advanced_example.py  common.py  data_loader_example.py  enhanced_data_loader_example.py  feature_engineering_example.py  integrated_classifier_example.py  model_building_example.py  omniclass_generator_example.py  omniclass_hierarchy_example.py  pipeline_factory_example.py  pipeline_orchestrator_example.py  pipeline_stages_example.py  random_guessing.py  simple_example.py  staging_data_example.py  training_pipeline_example.py  uniformat_keywords_example.py  validation_example.py
nexusml/ingest/: __init__.py
nexusml/notebooks/: enhanced_launch_jupyter.sh  enhanced_modular_template.ipynb  experiment_template.ipynb  fix_data_path.py  fix_experiment_template.py  init_notebook.py  launch_jupyter.sh  migration_example.ipynb  modular_template.ipynb  setup_notebook.py
nexusml/output/: equipment_templates.json  evaluation_results.json  integrated_classifier_results.json  omniclass_23-_hierarchy.txt  omniclass_example.txt  omniclass_hvac_hierarchy.md  omniclass_hvac_hierarchy.txt  staging_classification_results.json  test_staging_data.csv
nexusml/scripts/: README.md  cleanup_old_structure.sh  complete_cleanup.sh  migrate_examples.py  migrate_outputs.py  model_card_tool.py  remove_duplicate_examples.py  remove_duplicates.py  reorganize_structure.sh  train_model.sh  update_example_imports.py  update_output_paths.py  verify_structure.py
nexusml/src/: __init__.py
nexusml/test_output/: reference_validation_results.json  test_data1.csv  test_data1_classified.json  test_data2.csv
nexusml/tests/: __init__.py  conftest.py  test_config_phase1.py  test_env_override.py  test_env_validation.py  test_feature_engineering.py  test_feature_engineering_fix.py  test_model_building.py  test_model_prediction.py  test_modular_classification.py  test_train_model_pipeline_v2.py  test_train_model_pipeline_v2_components.py  test_validation.py  verification_script.py
nexusml/types/: validation.py
nexusml/utils/: __init__.py  csv_utils.py  data_selection.py  excel_utils.py  logging.py  notebook_utils.py  path_utils.py  verification.py
(+700 files in other folders)
