[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "utils", "ingest", "examples"]
package-dir = {"" = "."}

[project]
name = "core"
version = "0.1.0"
description = "Modern machine learning classification engine"
readme = "README.md"
authors = [
    {name = "FCA Dashboard Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "imbalanced-learn>=0.8.0",
    "pyyaml>=6.0",
    "setuptools>=57.0.0",
    "wheel>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.9.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Changed to false for more flexibility with ML code
disallow_incomplete_defs = false  # Changed to false for more flexibility with ML code
check_untyped_defs = true  # Added to check functions without requiring annotations
ignore_missing_imports = true  # Added to handle third-party libraries

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"